2000/10/31 V3.42
        MODELK is fixed to 0. Do not use MODELK=1.
        Harmonics sum modified in wmdisp.f
        Many other bug fixes.

2000/08/11 V3.41
	Pofile data handling for MODELM=9 updated: wmxprf.f ...
        Name of Pabs variables were changed

2000/08/10 V3.40
	Alfven eigenmode structure can be drawn.
	wmtae.f requires LAPACK library.
	If LAPACK library is not available,
	   comment CALL WMTAE in wmmain.f
	   and delete wmtae.f in Makefile
	Profile data can be read from file when MODELN=9.
	Input parameters WAEMIN,WAEMAX,MODELN added.

2000/01/28 V3.32
	Input parameters PU,PUS,PROFU1,PROFU2 added.
	Input parameters PNITB,PTITB,PUITB added as an array.
	NGRAPH=4 is now working.

1999/24/04 V3.31
	Input parameters RHOMIN,QMIN,PNITB,RHOITB added.

1999/08/04 V3.30
	Input interface modified.
	Multi mode radial graph
	Eigenmode routine reconstructed.

C
C*** /TASK/WM **********************************************************
C*                                                                     *
C*                           ANALYSIS OF                               *
C*                ICRF WAVE PROPAGATION AND ABSORPTION                 *
C*                ------------------------------------                 *
C*                         HOT or COLD PLASMA                          *
C*                    3-DIMENSIONAL INHOMOGENEITY                      *
C*                 FIRST ORDER FINITE ELEMENT METHOD                   *
C*                           FLUX COORDNATE                            *
C*                  MODE EXPANSION IN THETA AND PHI                    *
C*                                                                     *
C*                           T. KOHSAKA                                *
C*                           H. KIMURA                                 *
C*                           T. MIZOTA                                 *
C*                           T. TOHNAI                                 *