@@ -41,6 +41,7 @@ C
       COMMON /WMPRX1/ RHOMIN,QMIN
       COMMON /WMPRX2/ RHOITB,PNITB(NSM),PTITB(NSM),PUITB(NSM)
       COMMON /WMPRX3/ PU(NSM),PUS(NSM),PROFU1,PROFU2
+      COMMON /WMPRX4/ PRFIN
 C
       COMMON /WMANT1/ CRF,RD,BETAJ
       COMMON /WMANT2/ AJ(NAM),APH(NAM),NAMAX
@@ -116,4 +117,4 @@ C
       COMMON /WMMPI2/ NBST,NBED
 C
       COMMON /WMKNM1/ KNAMEQ,KNAMPF
-      CHARACTER KNAMEQ*72,KNAMPF*72
+      CHARACTER KNAMEQ*80,KNAMPF*80
