@@ -15,24 +15,10 @@ C
       DIMENSION DERIV(NRM),URNEFL(4,NRM),URTEFL(4,NRM),URTIFL(4,NRM)
       LOGICAL LEX
 C
-      IERR=0
       NPFDSK=22
-      IF(KNAMPF(1:2).EQ.'  ') GOTO 9000
-      INQUIRE(FILE=KNAMPF,EXIST=LEX,ERR=9000)
-      IF(LEX) THEN
-         OPEN(NPFDSK,FILE=KNAMPF,IOSTAT=IST,STATUS='OLD',ERR=10,
-     &        FORM='FORMATTED')
-         WRITE(6,*) '# OLD FILE (',KNAMPF,') IS ASSIGNED FOR INPUT.'
-         GOTO 30
-   10    WRITE(6,*) 'XX OLD FILE OPEN ERROR : IOSTAT = ',IST
-         IERR=8001
-         GOTO 9000
-      ELSE
-         WRITE(6,*) 'XX FILE (',KNAMPF,') NOT FOUND'
-         IERR=8002
-         GOTO 9000
-      ENDIF
-c
+      CALL FROPEN(NPFDSK,KNAMPF,1,0,'PF',IERR)
+      IF(IERR.NE.0) RETURN
+C
    30 REWIND(NPFDSK)
       NR=0
    40 READ(NPFDSK,'(4E15.8)',IOSTAT=IST,ERR=80,END=90) D1,D2,D3,D4
