@@ -811,11 +811,10 @@ C
 C
       FACT=1.D0
 C
-C      IF(PABSTT.GT.0.D0) THEN
-C         FACT=1.D0/PABSTT
-C      ELSE
-C         FACT=0.D0
-C      ENDIF
+      IF(PRFIN.GT.0.D0.AND.PABSTT.GT.0.D0) THEN
+         FACT=PRFIN/PABSTT
+      ENDIF
+      FACTSQ=SQRT(FACT)
 C
       NR=1
          DS(NR)=0.D0
@@ -873,6 +872,37 @@ C
          ENDDO
       ENDDO
       ENDIF
+C
+      DO NR=1,NRMAX+1
+         DO ND=NDMIN,NDMAX
+            NDX=ND-NDMIN+1
+         DO MD=MDMIN,MDMAX
+            MDX=MD-MDMIN+1
+            CEFLD(1,MDX,NDX,NR)=FACTSQ*CEFLDK(1,MDX,NDX,NR)
+            CEFLD(2,MDX,NDX,NR)=FACTSQ*CEFLDK(2,MDX,NDX,NR)
+            CEFLD(3,MDX,NDX,NR)=FACTSQ*CEFLDK(3,MDX,NDX,NR)
+            CBFLD(1,MDX,NDX,NR)=FACTSQ*CBFLDK(1,MDX,NDX,NR)
+            CBFLD(2,MDX,NDX,NR)=FACTSQ*CBFLDK(2,MDX,NDX,NR)
+            CBFLD(3,MDX,NDX,NR)=FACTSQ*CBFLDK(3,MDX,NDX,NR)
+         ENDDO
+         ENDDO
+         DO NPH=1,NPHMAX
+         DO NTH=1,NTHMAX
+            CEFLD(1,NTH,NPH,NR)=FACTSQ*CEFLD(1,NTH,NPH,NR)
+            CEFLD(2,NTH,NPH,NR)=FACTSQ*CEFLD(2,NTH,NPH,NR)
+            CEFLD(3,NTH,NPH,NR)=FACTSQ*CEFLD(3,NTH,NPH,NR)
+            CBFLD(1,NTH,NPH,NR)=FACTSQ*CBFLD(1,NTH,NPH,NR)
+            CBFLD(2,NTH,NPH,NR)=FACTSQ*CBFLD(2,NTH,NPH,NR)
+            CBFLD(3,NTH,NPH,NR)=FACTSQ*CBFLD(3,NTH,NPH,NR)
+            CEN(1,NTH,NPH,NR)  =FACTSQ*CEN(1,NTH,NPH,NR)
+            CEN(2,NTH,NPH,NR)  =FACTSQ*CEN(2,NTH,NPH,NR)
+            CEN(3,NTH,NPH,NR)  =FACTSQ*CEN(3,NTH,NPH,NR)
+            CEP(1,NTH,NPH,NR)  =FACTSQ*CEP(1,NTH,NPH,NR)
+            CEP(2,NTH,NPH,NR)  =FACTSQ*CEP(2,NTH,NPH,NR)
+            CEP(3,NTH,NPH,NR)  =FACTSQ*CEP(3,NTH,NPH,NR)
+         ENDDO
+         ENDDO
+      ENDDO
       CALL MPSYNC
 C
       RETURN
