@@ -408,7 +408,7 @@ C
       SUBROUTINE WMXRZF(IERR)
 C
       INCLUDE 'wmcomm.h'
-      CHARACTER KNAMEQSV*72
+      CHARACTER KNAMEQSV*80
       SAVE NRMAXSV,NTHMAXSV,NSUMAXSV,KNAMEQSV
       DATA NRMAXSV,NTHMAXSV,NSUMAXSV/0,0,0/
       DATA KNAMEQSV/'                                '/
