@@ -46,7 +46,7 @@ C
 C
       CHARACTER    TRFILE*80, CWK1*10
 C
-      CHARACTER*72 KNAMEQSV
+      CHARACTER KNAMEQSV*80
       SAVE NRMAXSV,NTHMAXSV,NSUMAXSV,KNAMEQSV
       SAVE ZEFFSV, NSMAXSV, PTSSV, PNSSV
 C
